# Tetris3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
.github/workflows/: cmake.yml
android-project/app/: build.gradle
android-project/app/src/main/assets/res/shaders/: shader.frag  shader.vert  shader_imgui.frag  shader_imgui.vert
android-project/app/src/main/java/org/home/tetris3d/: TestGame.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
android-project/app/src/main/res/values/: strings.xml
modules/: CMakeLists.txt
modules/imgui/: imconfig.h  imgui.h
res/models/: board.blend
res/shaders/: shader.frag  shader.vert  shader_imgui.frag  shader_imgui.vert
src/: CMakeLists.txt  game.cpp  game.h  main.cpp
src/core/: config.h  event.h  physics.cpp  physics.h  types.cpp  types.h
src/engine/: audio_buffer.cpp  audio_buffer.h  engine.h  engine_opengl.cpp  engine_opengl.h  index_buffer.cpp  index_buffer.h  shader.h  shader_opengl.cpp  shader_opengl.h  texture.h  texture_opengl.cpp  texture_opengl.h  vertex_buffer.cpp  vertex_buffer.h
src/glad/: glad.c  glad.h
src/objects/: camera.cpp  camera.h  figure.cpp  figure.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  primitive.cpp  primitive.h
src/shaders/: imgui_shader.vert  shader.frag
src/textures/: cube.blend
